front_end/react_app/src/gui/css/login_signup.css
#bg-outer{
    text-align: center;
    z-index: 0;
    height: 100%;
    width: 100%;
    overflow: hidden;

}
#bg-inner {
    height: 100%;
    width: 100%;
    position: fixed;
    background-size: cover;    
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-image: url('../img/bg.png');
}
.wrap-form{
    position: absolute;
    z-index: 1;
    left:50%; top:50%;
    transform:translate(-50%,-50%);
    -ms-transform:translate(-50%,-50%);
    border-radius: 10px;
    width: 500px;
    padding: 55px 55px 37px;
    overflow: hidden;
    background: #fff;
    border-radius: 10px;
    box-shadow: 0 5px 10px 0 rgba(0,0,0,.4);
    -moz-box-shadow: 0 5px 10px 0 rgba(0,0,0,.4);
    -o-box-shadow: 0 5px 10px 0 rgba(0,0,0,.4);
    -ms-box-shadow: 0 5px 10px 0 rgba(0,0,0,.4);
    -webkit-box-shadow: 0 5px 10px 0 rgba(0,0,0,.4);
}
.form{
    width: 100%;
    font-size: 15px;
}
/* text */
span{
    font-size: 30px;            
    line-height: 1.2;
    text-align: center;
    display: block;
}
/* text */
/* logo */
.wrap-logo{
    text-align: center;
}
.logo{
    width: 30%;
    line-height: 1.2;
}
/* logo */
/* inputs */
.wrap-form-input{
    position: relative;
    width: 100%;
    border-bottom: 2px solid #adadad;
}
input{            
    color: #555;
    line-height: 1.2;
    display: block;
    width: 100%;
    height: 45px;
    background: 0 0;
    padding: 0 5px;
    outline: none;
    border: none;
    overflow: visible;
}
/* inputs */
/* login button */
button{
    width: 200px;
    line-height: 1.2;
}
/* login button */
/* input helper */
.helper{
    font-size: 12px;
    text-align: left;
    margin: 0;
}
/* input helper */
.btm-space{
    margin-bottom: 37px;
}

